Version 1.8:
	Refer: JIRA cards CP-5, CP-6, CP-8 and CP-19
	
	#######################################################################
	Nov, 18, 2018:
	Tinycoin server:
		22. Address generation using random strings. Currently kept address length at 32.
		23. Transaction amount is credited to 'to' address and deducted from 'from' address.
		
Version 1.7:
	Refer: JIRA cards CP-5 and CP-8.
	
	#######################################################################
	Oct, 25, 2018:
	HTML page:
		18. Load coin balances from tinycoin server.
	Tinycoin Server:
		19. New class Miner added for storing address and coins spent, earned and balance.
		20. API return values modified to accommodate miner details also.
		21. Current miner will be treated as the owner of the tincycoin server on current host.
		
	#######################################################################
	Oct, 18, 2018:
	HTML page:
		14. Boot strap 4 implementation as suggested by Prakash
		15. Added coins division
		16. Handling of coin balance in HTML, for now
	Tinycoin Server:
		17. All API return JSON object in a fixed format
	
	#######################################################################
	Oct, 12, 2018:
	HTML page:
		 9. Bug fix - trim operation on server address
		10. Prefix http:// if absent from server address
			Suffix / if absent from server address
		12. clear buttons at transaction and new peers input list. 
	Others:
		13. Dockerfile for Windows 7 platform
		
	#######################################################################
	Oct, 10, 2018:
		7. Bug fix in mine API. Timestamp, txnid and signature parameters are missing when constructing the chain.
		8. index.html - version, peers and results text boxes made read-only.
	#######################################################################
	
	Oct, 9, 2018:
		1. Web GUI for invoking API calls 
			Populate updated values into appropriate places eg. update miner displays the new value in miner box
			
		2. Version API