@@ -18,25 +18,28 @@ RqRsDataType = {
 
 TinycoinAPI = 
 {
-	//API, [API Name, REST method, content-type, html id, next-operation]
-	"version": ["version", "get", "text", "version", ""],
+	/* Note these SN are not in sync with ReadMe.md file. These are just for counting purposes */
+    /* SN */ //API,     [API Name, REST method, content-type, html id, next-operation]
+	/* 01 */ "version": ["version", "get", "text", "version", ""],												
 
-	"get_miner_address": ["get_miner_address", "get", "text", "miner", ""],
-	"update_miner_address": ["update_miner_address", "post", "json", "miner", "get_miner_address"],
-	"all_miner_address": ["all_miner_address", "get", "json", "miner", "get_miner_address"],
+	/* 02 */ "get_miner_address": ["get_miner_address", "get", "text", "miner", ""],
+	/* 03 */ "update_miner_address": ["update_miner_address", "post", "json", "miner", "get_miner_address"],
+	/* 04 */ "all_miner_address": ["all_miner_address", "get", "json", "miner", "get_miner_address"],
 	
-	"add_peers": ["add_peers", "post", "json", "peers", "connect_to_peers_of_peers"],
-	"append_peers": ["append_peers", "post", "json", "peers", "connect_to_peers_of_peers"],
-	"peer_addresses": ["peer_addresses", "get", "json", "results", ""],
-	
-	"peers": ["peers", "get", "text", "peers", ""],
-	"connect_to_peers_of_peers": ["connect_to_peers_of_peers", "get", "text", "peers", ""],
-	
-	"transaction": ["transaction", "post", "json", "", ""],
-	
-	"mine": ["mine", "get", "text", "results", ""],
-	"blocks": ["blocks", "get", "text", "results", ""],
-	"consensus": ["consensus", "get", "text", "", ""],
+	/* 05 */ "add_peers": ["add_peers", "post", "json", "peers", "connect_to_peers_of_peers"],
+	/* 06 */ "append_peers": ["append_peers", "post", "json", "peers", "connect_to_peers_of_peers"],
+	/* 07 */ "peer_addresses": ["peer_addresses", "get", "json", "results", ""],
+
+	/* 08 */ "peers": ["peers", "get", "text", "peers", ""],
+	/* 09 */ "connect_to_peers_of_peers": ["connect_to_peers_of_peers", "get", "text", "peers", ""],
+
+	/* 10 */ "transaction": ["transaction", "post", "json", "", ""],
+
+	/* 11 */ "coins": ["coins", "get", "json", "", ""], // v1.8
+
+	/* 12 */ "mine": ["mine", "get", "text", "results", ""],
+	/* 13 */ "blocks": ["blocks", "get", "text", "results", ""],
+	/* 14 */ "consensus": ["consensus", "get", "text", "", ""],
 }
 
 function makePostRq(url,headers,data) {
